--- a/lab_notebook.ipynb
+++ b/lab_notebook.ipynb
@@ -1104,7 +1104,123 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup as soup # HTML parser\n",
+    "bsObj = soup(raw.content,'html.parser') # Parse the html\n",
+    "listings = bsObj.find_all(class_=\"cl-static-search-result\") # Find all listings of the kind we want"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re # Regular expressions\n",
+    "\n",
+    "brands = ['honda', 'dodge','toyota','ford','tesla','gmc','jeep','bmw','mitsubishi','mazda',\n",
+    "          'volvo','audi','volkswagen','chevy','chevrolet','acura','kia','subaru','lexus',\n",
+    "          'cadillac','buick','porsche','infiniti']\n",
+    "\n",
+    "data = [] # We'll save our listings in this object\n",
+    "for k in range( len(listings) ):\n",
+    "    title = listings[k].find('div',class_='title').get_text().lower()\n",
+    "    price = listings[k].find('div',class_='price').get_text()\n",
+    "    link = listings[k].find(href=True)['href']\n",
+    "    # Get brand from the title string:\n",
+    "    words = title.split()\n",
+    "    hits = [word for word in words if word in brands] # Find brands in the title\n",
+    "    if len(hits) == 0:\n",
+    "        brand = 'missing'\n",
+    "    else:\n",
+    "        brand = hits[0]\n",
+    "    # Get years from title string:\n",
+    "    regex_search = re.search(r'20[0-9][0-9]|19[0-9][0-9]', title ) # Find year references\n",
+    "    if regex_search is None: # If no hits, record year as missing value\n",
+    "        year = np.nan\n",
+    "    else: # If hits, record year as first match\n",
+    "        year = regex_search.group(0)\n",
+    "    #\n",
+    "    data.append({'title':title,'price':price,'year':year,'link':link,'brand':brand})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Wrangle the data\n",
+    "df = pd.DataFrame.from_dict(data)\n",
+    "df['price'] = df['price'].str.replace('$','')\n",
+    "df['price'] = df['price'].str.replace(',','')\n",
+    "df['price'] = pd.to_numeric(df['price'],errors='coerce')\n",
+    "df['year'] = pd.to_numeric(df['year'],errors='coerce')\n",
+    "df['age'] = 2025-df['year']\n",
+    "print(df.shape)\n",
+    "df.to_csv('./src/craigslist_cville_cars.csv') # Save data in case of a disaster\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['price'].describe())\n",
+    "df['price'].hist(grid=False)\n",
+    "plt.show()\n",
+    "print(df['age'].describe())\n",
+    "df['age'].hist(grid=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Price by brand:\n",
+    "df.loc[:,['price','brand']].groupby('brand').describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Age by brand:\n",
+    "df.loc[:,['age','brand']].groupby('brand').describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.scatterplot(data=df, x='age', y='price',hue='brand')\n",
+    "sns.move_legend(ax, \"upper left\", bbox_to_anchor=(1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['log_price'] = np.log(df['price'])\n",
+    "df['log_age'] = np.log(df['age'])\n",
+    "\n",
+    "ax = sns.scatterplot(data=df, x='log_age', y='log_price',hue='brand')\n",
+    "sns.move_legend(ax, \"upper left\", bbox_to_anchor=(1, 1))\n",
+    "\n",
+    "print(df.loc[:,['log_price','log_age']].cov())\n",
+    "print(df.loc[:,['log_price','log_age']].corr())"
+   ]
   }
  ],
  "metadata": {
