updated fields we want to grab

--- a/lab_notebook.ipynb
+++ b/lab_notebook.ipynb
@@ -1084,8 +1084,9 @@
    "metadata": {},
    "source": [
     "## 1.\n",
-    "We're looking at the Motorcycles craigslist page the fields of data we would collect would be Price, Date Listed, Year Produced, Brand, and Location. The basic EDA that we would do with this would be: \n",
-    "// idk we need to fill this out"
+    "We're looking at the Motorcycles craigslist page the fields of data we would collect would be Price, Year Produced, Brand, Odometer(miles driven), Type, and Location. The basic EDA that we would do with this would be: \n",
+    "We grab the brand and the year from the Title of the listing and grab the price as is\n",
+    "We could go into the individual pages and grab each HTML "
    ]
   },
   {
@@ -1118,9 +1119,7 @@
    "source": [
     "import re # Regular expressions\n",
     "\n",
-    "brands = ['honda', 'dodge','toyota','ford','tesla','gmc','jeep','bmw','mitsubishi','mazda',\n",
-    "          'volvo','audi','volkswagen','chevy','chevrolet','acura','kia','subaru','lexus',\n",
-    "          'cadillac','buick','porsche','infiniti']\n",
+    "brands = ['honda', 'kawasaki', 'triumph', 'yamaha', 'bmw', 'harley', 'h-d', 'victory']\n",
     "\n",
     "data = [] # We'll save our listings in this object\n",
     "for k in range( len(listings) ):\n",
