--- a/lab_notebook.ipynb
+++ b/lab_notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {
     "id": "bT63yifry3XX"
    },
@@ -36,6 +36,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "from bs4 import BeautifulSoup as soup # HTML parser\n",
     "\n",
     "import requests # Page requests\n",
     "\n",
@@ -80,13 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "lllobrYIy3XY"
    },
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup as soup # HTML parser\n",
     "bsObj = soup(raw.content,'html.parser') # Parse the html\n",
     "listings = bsObj.find_all(class_=\"cl-static-search-result\") # Find all listings of the kind we want"
    ]
@@ -1091,24 +1091,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "header = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:124.0) Gecko/20100101 Firefox/124.0'} # How we wish to appear to CL\n",
     "url = 'https://charlottesville.craigslist.org/search/mca?purveyor=owner#search=2~gallery~0' # The page we want to scrape\n",
-    "raw = requests.get(url,headers=header) # Get page\n"
+    "raw = requests.get(url,headers=header) # Get page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# i stole this from before\n",
+    "bsObj = soup(raw.content,'html.parser') # Parse the html\n",
+    "listings = bsObj.find_all(class_=\"cl-static-search-result\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ok here's the general idea; it's not enough to just read from the static page cause it's too little info.\n",
+    "# i'm instead going to get the links to each listing and then parse the data THERE because there's a lot more info to work with!\n",
+    "links_to_visit = []\n",
+    "# df instantiation for later\n",
+    "motorcycle_df = pd.DataFrame(columns=['year', 'make_model', 'motorcycle_type', 'odometer_reading', 'price'])\n",
+    "# looping through the listings to grab the links\n",
+    "for listing in listings:\n",
+    "    links_to_visit.append(listing.find('a').attrs['href'])\n",
+    "\n",
+    "# now we actually visit them\n",
+    "for link in links_to_visit:\n",
+    "    raw = requests.get(link, headers=header)\n",
+    "    bsObj = soup(raw.content,'html.parser')\n",
+    "    # grab the make-model and year data with this class\n",
+    "    make_model_div = bsObj.find_all(class_='attr important')\n",
+    "    # if there's no data in the resultset it's just missing\n",
+    "    if len(type_div) == 0:\n",
+    "        year = 'missing'\n",
+    "        make_model = 'missing'\n",
+    "    else:\n",
+    "        year = make_model_div[0].contents[1].get_text()\n",
+    "        make_model = make_model_div[0].contents[3].get_text()\n",
+    "    # repeat with grabbing the motorcycle type\n",
+    "    type_div = bsObj.find_all(class_='attr motorcycle_type')\n",
+    "    if len(type_div) == 0:\n",
+    "        motorcycle_type = 'missing'\n",
+    "    else:\n",
+    "        motorcycle_type = type_div[0].contents[3].get_text()\n",
+    "    # repeat with grabbing the odometer reading\n",
+    "    odometer_div = bsObj.find_all(class_='attr auto_miles')\n",
+    "    if len(odometer_div) == 0:\n",
+    "        odometer_reading = 'missing'\n",
+    "    else:\n",
+    "        odometer_reading = odometer_div[0].contents[3].get_text()\n",
+    "    # lastly grab the price\n",
+    "    price_div = bsObj.find_all(class_='price')\n",
+    "    if len(price_div) == 0:\n",
+    "        price = 'missing'\n",
+    "    else:\n",
+    "        price = price_div[0].get_text()\n",
+    "    # this was absolutely disgusting to write and I hate my life\n",
+    "    motorcycle_df = pd.concat([motorcycle_df, pd.DataFrame({'year': [year], \n",
+    "                                                            'make_model': [make_model], \n",
+    "                                                            'motorcycle_type': [motorcycle_type], \n",
+    "                                                            'odometer_reading': [odometer_reading], \n",
+    "                                                            'price': [price]})], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>make_model</th>\n",
+       "      <th>motorcycle_type</th>\n",
+       "      <th>odometer_reading</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Victory Kingpin\\n</td>\n",
+       "      <td>cruiser\\n</td>\n",
+       "      <td>876</td>\n",
+       "      <td>$4,750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>ducati scrambler\\n</td>\n",
+       "      <td>standard\\n</td>\n",
+       "      <td>11,490</td>\n",
+       "      <td>$4,899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>yamaha v star 1100\\n</td>\n",
+       "      <td>cruiser\\n</td>\n",
+       "      <td>2,300</td>\n",
+       "      <td>$3,500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Zero FXS ZF7.2\\n</td>\n",
+       "      <td>standard\\n</td>\n",
+       "      <td>4,042</td>\n",
+       "      <td>$5,800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>yamaha vstar 650\\n</td>\n",
+       "      <td>cruiser\\n</td>\n",
+       "      <td>3,100</td>\n",
+       "      <td>$2,800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year             make_model motorcycle_type odometer_reading   price\n",
+       "0  2003      Victory Kingpin\\n       cruiser\\n              876  $4,750\n",
+       "1           ducati scrambler\\n      standard\\n           11,490  $4,899\n",
+       "2         yamaha v star 1100\\n       cruiser\\n            2,300  $3,500\n",
+       "3  2020       Zero FXS ZF7.2\\n      standard\\n            4,042  $5,800\n",
+       "4  2013     yamaha vstar 650\\n       cruiser\\n            3,100  $2,800"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from bs4 import BeautifulSoup as soup # HTML parser\n",
-    "bsObj = soup(raw.content,'html.parser') # Parse the html\n",
-    "listings = bsObj.find_all(class_=\"cl-static-search-result\") # Find all listings of the kind we want"
+    "motorcycle_df.head()"
    ]
   },
   {
@@ -1227,7 +1377,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1241,7 +1391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
